[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "esql-parser"
version = "0.0.0"
description = "Python parser for Elasticsearch ESQL"
readme = "README.md"
license = { text = "Elastic License 2.0", file = "LICENSE" }
authors = [
    { name = "Michael Bischoff", email = "michael@bischoff.dev" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
]
dependencies = [
    "antlr4-python3-runtime==4.13.1"
]

[project.urls]
Homepage = "https://github.com/mjmbischoff/esql-check"
Issues = "https://github.com/mjmbischoff/esql-check/issues"